Convert listDir to return a query